# vec-eyes-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: real_examples.md  save-load.md
src/: advanced_models.rs  classifier.rs  compat.rs  config.rs  dataset.rs  error.rs  filesystem.rs  labels.rs  lib.rs  math.rs  metrics.rs  parallel.rs  report.rs  security.rs  types.rs
src/alerts/: mod.rs
src/bayes/: mod.rs
src/builders/: mod.rs
src/classifiers/: mod.rs
src/classifiers/bayes/: core.rs  mod.rs
src/classifiers/gradient_boosting/: core.rs  mod.rs
src/classifiers/isolation_forest/: core.rs  mod.rs
src/classifiers/knn/: core.rs  distance.rs  mod.rs
src/classifiers/logistic_regression/: core.rs  mod.rs
src/classifiers/random_forest/: core.rs  mod.rs
src/classifiers/svm/: core.rs  mod.rs
src/engine/: mod.rs
src/factory/: mod.rs  spec.rs  typed.rs
src/knn/: mod.rs
src/matcher/: mod.rs
src/nlp/: external_embeddings.rs  fasttext_bin.rs  feature_extractor.rs  mod.rs  normalizer.rs  tokenizer.rs  word2vec_bin.rs
src/report/: mod.rs
tests/: advanced_models.rs  architecture_api.rs  basic.rs  helpers_and_ensemble.rs  integration_vec_eyes.rs  save_load.rs  tests.md  yaml_realistic.rs
tests/data/: README.md
tests/data/cold/: request_1.txt  request_2.txt
tests/data/cold_regular/: a.txt  b.txt  normal.txt
tests/data/hot/: request_1.txt  request_2.txt
tests/data/hot_attack/: a.txt  attack.txt  b.txt
tests/data/rules/: biology_alerts.yaml  biology_bayes_count.yaml  biology_bayes_tfidf.yaml  biology_gradientboosting.yaml  biology_isolation_forest.yaml  biology_knn_fasttext_cosine.yaml  biology_knn_fasttext_manhattan.yaml  biology_knn_fasttext_minkowski.yaml  biology_knn_word2vec_euclidean.yaml  biology_logisticregression.yaml  biology_randomforest.yaml  biology_svm.yaml  block_rules.json  fraud_alerts.txt  fraud_bayes_count.yaml  fraud_bayes_tfidf.yaml  fraud_gradientboosting.yaml  fraud_isolation_forest.yaml  fraud_knn_cosine.yaml  fraud_knn_euclidean.yaml  fraud_knn_manhattan.yaml  fraud_knn_minkowski.yaml  fraud_logisticregression.yaml  fraud_randomforest.yaml  fraud_svm.yaml  fraud_svm_polynomial.yaml  invalid_logistic_missing_params.yaml  invalid_missing_k.yaml  invalid_randomforest_oob_without_bootstrap.yaml  invalid_svm_missing_kernel.yaml  sms_gradientboosting.yaml  sms_logisticregression.yaml  sms_randomforest.yaml  sms_randomforest_balanced.yaml  sms_svm.yaml  (+4 more)
(+42 files in other folders)
