[package]
name = "vec-eyes-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Builder-based behavioral text and file classifier with Naive Bayes, KNN, alert rules, and Vectorscan-backed matching"

[lib]
name = "vec_eyes_lib"
path = "src/lib.rs"

[features]
default = ["parallel"]
parallel = ["dep:rayon", "ndarray/rayon"]
blas = ["dep:blas-src", "ndarray/blas"]

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
csv = "1.3"
ndarray = "0.15"
rayon = { version = "1.10", optional = true }
blas-src = { version = "0.10", features = ["openblas"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
vectorscan-rs = "0.0.6"
