[package]
name = "vec-eyes-lib"
version = "2.5.0"
edition = "2021"
license = "MIT"
authors = ["Orangewarrior"]

[lib]
name = "vec_eyes_lib"
path = "src/lib.rs"

[features]
default = []
blas = ["ndarray/blas"]
vectorscan = ["dep:vectorscan-rs"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
ndarray = { version = "0.15", features = [] }
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
walkdir = "2"
rand = "0.8"
vectorscan-rs = { version = "0.0.6", optional = true }

[dev-dependencies]
tempfile = "3"
