[package]
name = "vec-eyes-lib"
version = "3.0.0"
edition = "2021"
license = "MIT"
authors = ["Orangewarrior"]

[lib]
name = "vec_eyes_lib"
path = "src/lib.rs"

[features]
default = []
# Enable BLAS-accelerated matrix ops (dgemm/gemv/sdot).
# Also add a concrete backend in your binary crate, e.g.:
#   blas-src = { version = "0.10", features = ["openblas"] }
blas = ["ndarray/blas", "dep:blas-src"]
vectorscan = ["dep:vectorscan-rs"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
ndarray = { version = "0.17", features = ["serde"] }
# BLAS provider – backend chosen by the downstream binary crate via feature flags
blas-src = { version = "0.10", default-features = false, optional = true }
rayon = "1.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1"
thiserror = "2"
walkdir = "2"
rand = "0.10"
vectorscan-rs = { version = "0.0.6", optional = true }

[dev-dependencies]
tempfile = "3"
